force-app/main/default/objects/PII_Mask_Config__mdt/PII_Mask_Config__mdt.object-meta.xml
<CustomObject>
    <label>PII Mask Config</label>
    <pluralLabel>PII Mask Configs</pluralLabel>
</CustomObject>