force-app/main/default/objects/PII_Mask_Config__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this masking config is active</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>