force-app/main/default/objects/PII_Mask_Config__mdt/fields/Masking_Type__c.field-meta.xml
<CustomField>
    <fullName>Masking_Type__c</fullName>
    <description>Type of masking strategy</description>
    <label>Masking Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
                <default>true</default>
                <label>Auto</label>
            </value>
            <value>
                <fullName>Static</fullName>
            </value>
            <value>
                <fullName>Suffix</fullName>
            </value>
            <value>
                <fullName>Random</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>