force-app/main/default/objects/PII_Mask_Config__mdt/fields/Pattern__c.field-meta.xml
<CustomField>
    <fullName>Pattern__c</fullName>
    <description>Optional pattern for masking (e.g., [masked].invalid for suffix)</description>
    <label>Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>